[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Pedro"]

[tool.poetry.dependencies]
python = "^3.7"
spark-nlp = "^3.0.3"
scikit-spark = "^0.4.0"
pyspark = "^3.1.1"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.1"
graphviz = "^0.16"
pydot = "^1.4.2"
numpy = "^1.20.2"
notebook = "^6.3.0"
tensorflow = "^2.0.0"
pandas = "^1.0.0"
jupyter = "^1.0.0"
nlu = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
